--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,17 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-18 Mon 22:10]
+#+CAPTION: Clock summary at [2017-09-18 Mon 22:56]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:03* |      |      | 100.0 |
+| *Total time*                                                                | *3:58* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:03   |      |      | 100.0 |
-| Active                                                                      |        | 3:03 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  76.0 |
-| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |  16.4 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   7.7 |
+| Stories                                                                     | 3:58   |      |      | 100.0 |
+| Active                                                                      |        | 3:58 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  58.4 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   5.9 |
+| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |  12.6 |
+| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   4.2 |
+| STARTED Consider revamping the project logo                                 |        |      | 0:45 |  18.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -178,6 +180,12 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6315644420331053056][LinkedIn]]
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
+*** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-09-18 Mon 21:32]--[2017-09-18 Mon 21:39] =>  0:07
+    CLOCK: [2017-09-18 Mon 00:01]--[2017-09-18 Mon 00:08] =>  0:07
+
+Updates to sprint and product backlog.
+
 *** COMPLETED Add logging to all top-level workflow activities        :story:
     CLOSED: [2017-09-18 Mon 21:43]
 
@@ -208,17 +216,21 @@ Tasks:
   they are doing.
 - remove code-generation, create a transform for it.
 
-*** STARTED Sprint and product backlog grooming                       :story:
-    CLOCK: [2017-09-18 Mon 21:32]--[2017-09-18 Mon 21:39] =>  0:07
-    CLOCK: [2017-09-18 Mon 00:01]--[2017-09-18 Mon 00:08] =>  0:07
+*** CANCELLED Add an "at" field to transform stats                    :story:
+    CLOSED: [2017-09-18 Mon 22:21]
+    CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:21] =>  0:10
 
-Updates to sprint and product backlog.
-
-*** Add an "at" field to transform stats                              :story:
+*Rationale*: given the current state of affairs in C++, its best if we
+just rely on the file timestamp.
 
 At present we cannot tell when the transform stats were dumped. We
 could of course look at timestamps but to make life easier for the
 user we could add a field with a date in local time - or perhaps UTC?
+
+*** STARTED Consider revamping the project logo                       :story:
+    CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:56] =>  0:45
+
+Try doing something slightly less "street".
 
 *** Create a code generation chain                                    :story:
 
