--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-19 Tue 07:40]
+#+CAPTION: Clock summary at [2017-09-19 Tue 08:36]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:18* |      |      | 100.0 |
+| *Total time*                                                                | *4:38* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:18   |      |      | 100.0 |
-| Active                                                                      |        | 4:18 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  53.9 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   5.4 |
-| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |  11.6 |
-| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   3.9 |
-| STARTED Consider revamping the project logo                                 |        |      | 0:45 |  17.4 |
-| STARTED Move enablement into yarn                                           |        |      | 0:20 |   7.8 |
+| Stories                                                                     | 4:38   |      |      | 100.0 |
+| Active                                                                      |        | 4:38 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  50.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   5.0 |
+| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |  10.8 |
+| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   3.6 |
+| STARTED Consider revamping the project logo                                 |        |      | 0:45 |  16.2 |
+| STARTED Move enablement into yarn                                           |        |      | 0:40 |  14.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -231,12 +231,9 @@ At present we cannot tell when the transform stats were dumped. We
 could of course look at timestamps but to make life easier for the
 user we could add a field with a date in local time - or perhaps UTC?
 
-*** STARTED Consider revamping the project logo                       :story:
-    CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:56] =>  0:45
-
-Try doing something slightly less "street".
-
-*** STARTED Move enablement into yarn                                 :story:
+*** COMPLETED Move enablement into yarn                               :story:
+    CLOSED: [2017-09-19 Tue 08:36]
+    CLOCK: [2017-09-19 Tue 07:41]--[2017-09-19 Tue 08:01] =>  0:20
     CLOCK: [2017-09-19 Tue 07:20]--[2017-09-19 Tue 07:40] =>  0:20
 
 It seems that the concepts around enablement are actually not kernel
@@ -290,6 +287,11 @@ We need to make use of the exact same logic as implemented in
 =quilt.cpp= for enablement. Perhaps all of the enablement related
 functionality can be lifted and grafted onto quilt without any major
 changes.
+
+*** STARTED Consider revamping the project logo                       :story:
+    CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:56] =>  0:45
+
+Try doing something slightly less "street".
 
 *** Add facet validation against language standard                    :story:
 
