--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-19 Tue 21:47]
+#+CAPTION: Clock summary at [2017-09-20 Wed 21:46]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:17* |      |      | 100.0 |
+| *Total time*                                                                | *7:51* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:17   |      |      | 100.0 |
-| Active                                                                      |        | 6:17 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  36.9 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   3.7 |
-| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   8.0 |
-| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   2.7 |
-| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  16.2 |
-| STARTED Consider revamping the project logo                                 |        |      | 0:45 |  11.9 |
-| STARTED Generate file paths as a transform                                  |        |      | 1:18 |  20.7 |
+| Stories                                                                     | 7:51   |      |      | 100.0 |
+| Active                                                                      |        | 7:51 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  29.5 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   3.0 |
+| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   6.4 |
+| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   2.1 |
+| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  13.0 |
+| STARTED Consider revamping the project logo                                 |        |      | 0:45 |   9.6 |
+| STARTED Generate file paths as a transform                                  |        |      | 2:52 |  36.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -296,6 +296,7 @@ changes.
 Try doing something slightly less "street".
 
 *** STARTED Generate file paths as a transform                        :story:
+    CLOCK: [2017-09-20 Wed 20:12]--[2017-09-20 Wed 21:46] =>  1:34
     CLOCK: [2017-09-19 Tue 21:42]--[2017-09-19 Tue 21:47] =>  0:05
     CLOCK: [2017-09-19 Tue 21:20]--[2017-09-19 Tue 21:41] =>  0:21
     CLOCK: [2017-09-19 Tue 17:51]--[2017-09-19 Tue 18:43] =>  0:52
@@ -388,9 +389,8 @@ We could introduce two concepts:
 
 - file groups: include, implementation.
 
-Merged Stories:
-
-*Split out the file extension from the formatter*
+**** Merged Stories
+***** Split out the file extension from the formatter
 
 At present we have handled file extensions in one of two ways:
 
@@ -419,7 +419,7 @@ extension kind, archetype etc. This would replace the proliferation of
 We also have the concept of inclusion paths. We should generalise this
 to just "relative paths" and have a "add project directory?" flag.
 
-*Name all project paths according to a scheme*
+***** Name all project paths according to a scheme
 
 The locator API looks really confusing due to the various kinds of
 paths. We need to catalogue them all and name them properly.
@@ -432,7 +432,7 @@ paths. We need to catalogue them all and name them properly.
 - include directory: aka inclusion directory; directory to place in
   the include path.
 
-*Handling of visual studio projects and solutions is incorrect*
+***** Handling of visual studio projects and solutions is incorrect
 
 At present we added the extension of the solution/project to the
 element name, e.g.:
@@ -508,6 +508,61 @@ includes. There are some differences though:
   part requires some hacking. We could have an option in locator:
   "apply archetype postfix" supplied as an argument. Since we have the
   Visual Studio element we have visibility of all enabled versions.
+
+***** Add a "flat directory" mode
+
+It would be nice to have a mode in which all files get placed in a
+single-directory: no src, include, etc – just one big folder with all
+files.
+
+Actually we can already achieve this:
+
+- set =quilt.cpp.disable_facet_directories= to true
+- set =quilt.cpp.include_directory_name= to empty
+- set =quilt.cpp.source_directory_name= to empty
+
+It is however a bit painful. It would be nice to have a shorthand for
+this, which could be the "flat directory" mode. It is also compatible
+with split project mode (we just have flat directories in two
+different top-level directories), which is nice.
+
+We should check that =enable_unique_file_names= is set to true.
+
+Key: =quilt.cpp.flat_directory_mode.enabled=.
+
+*** Tidy-up fabric                                                    :story:
+
+Now we have dynamic transforms, we don't really need all the classlets
+we've created in fabric. We can get away with probably just the
+dynamic transform, calling all the factories.
+
+*** Clean-up archetype locations modeling                             :story:
+
+We now have a large number of containers with different aspects of
+archetype locations data. We need to look through all of the usages of
+archetype locations and see if we can make the data structures a bit
+more sensible. For example, we should use archetype location id's
+where possible and only use the full type where required.
+
+Notes:
+
+- formatters could return id's?
+- add an ID to archetype location; create a builder like name builder
+  and populate ID as part of the build process.
+
+*** Use element ids for associations                                  :story:
+
+There doesn't seem a need for having entire names for associations;
+these are used to find information by ID anyway. We should try to
+convert them to element id's instead and see what breaks.
+
+- transparent, opaque associations
+- base, derived visitor
+- contained by
+
+We can't do this for:
+
+- visitor: we use the name in the formatter.
 
 *** Add facet validation against language standard                    :story:
 
@@ -616,20 +671,6 @@ could potentially want to implement other backends that are totally
 distinct from quilt. However, we still do not have a concrete use case
 for this. Thus it may make more sense to just fold now and worry about
 these more flexible use cases when they arrive. We can always rename.
-
-*** Use element ids for associations                                  :story:
-
-There doesn't seem a need for having entire names for associations;
-these are used to find information by ID anyway. We should try to
-convert them to element id's instead and see what breaks.
-
-- transparent, opaque associations
-- base, derived visitor
-- contained by
-
-We can't do this for:
-
-- visitor: we use the name in the formatter.
 
 *** Code-generate annotations type templates                          :story:
 
