--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-20 Wed 21:46]
+#+CAPTION: Clock summary at [2017-09-20 Wed 22:00]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:51* |      |      | 100.0 |
+| *Total time*                                                                | *8:04* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:51   |      |      | 100.0 |
-| Active                                                                      |        | 7:51 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  29.5 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   3.0 |
-| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   6.4 |
+| Stories                                                                     | 8:04   |      |      | 100.0 |
+| Active                                                                      |        | 8:04 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  28.7 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   2.9 |
+| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   6.2 |
 | CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   2.1 |
-| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  13.0 |
-| STARTED Consider revamping the project logo                                 |        |      | 0:45 |   9.6 |
-| STARTED Generate file paths as a transform                                  |        |      | 2:52 |  36.5 |
+| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  12.6 |
+| COMPLETED Consider revamping the project logo                               |        |      | 0:58 |  12.0 |
+| STARTED Generate file paths as a transform                                  |        |      | 2:52 |  35.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -290,7 +290,9 @@ We need to make use of the exact same logic as implemented in
 functionality can be lifted and grafted onto quilt without any major
 changes.
 
-*** STARTED Consider revamping the project logo                       :story:
+*** COMPLETED Consider revamping the project logo                     :story:
+    CLOSED: [2017-09-20 Wed 22:00]
+    CLOCK: [2017-09-20 Wed 21:47]--[2017-09-20 Wed 22:00] =>  0:13
     CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:56] =>  0:45
 
 Try doing something slightly less "street".
