--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-20 Wed 22:00]
+#+CAPTION: Clock summary at [2017-09-21 Thu 10:14]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:04* |      |      | 100.0 |
+| *Total time*                                                                | *9:08* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:04   |      |      | 100.0 |
-| Active                                                                      |        | 8:04 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  28.7 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   2.9 |
-| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   6.2 |
-| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   2.1 |
-| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  12.6 |
-| COMPLETED Consider revamping the project logo                               |        |      | 0:58 |  12.0 |
-| STARTED Generate file paths as a transform                                  |        |      | 2:52 |  35.5 |
+| Stories                                                                     | 9:08   |      |      | 100.0 |
+| Active                                                                      |        | 9:08 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 2:19 |  25.4 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:14 |   2.6 |
+| COMPLETED Rename top-level transformations                                  |        |      | 0:30 |   5.5 |
+| CANCELLED Add an "at" field to transform stats                              |        |      | 0:10 |   1.8 |
+| COMPLETED Move enablement into yarn                                         |        |      | 1:01 |  11.1 |
+| COMPLETED Consider revamping the project logo                               |        |      | 2:02 |  22.3 |
+| STARTED Generate file paths as a transform                                  |        |      | 2:52 |  31.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -292,6 +292,7 @@ changes.
 
 *** COMPLETED Consider revamping the project logo                     :story:
     CLOSED: [2017-09-20 Wed 22:00]
+    CLOCK: [2017-09-21 Thu 09:10]--[2017-09-21 Thu 10:14] =>  1:04
     CLOCK: [2017-09-20 Wed 21:47]--[2017-09-20 Wed 22:00] =>  0:13
     CLOCK: [2017-09-18 Mon 22:11]--[2017-09-18 Mon 22:56] =>  0:45
 
