--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-22 Fri 12:03]
+#+CAPTION: Clock summary at [2017-09-22 Fri 13:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:20* |       |      | 100.0 |
+| *Total time*                                                                | *13:45* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:20   |       |      | 100.0 |
-| Active                                                                      |         | 13:20 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  17.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:14 |   1.8 |
-| COMPLETED Rename top-level transformations                                  |         |       | 0:30 |   3.8 |
+| Stories                                                                     | 13:45   |       |      | 100.0 |
+| Active                                                                      |         | 13:45 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  16.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:14 |   1.7 |
+| COMPLETED Rename top-level transformations                                  |         |       | 0:30 |   3.6 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   1.2 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   7.6 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  15.2 |
-| STARTED Create the archetype location properties                            |         |       | 0:35 |   4.4 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  48.6 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   7.4 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  14.8 |
+| STARTED Create the archetype location properties                            |         |       | 1:00 |   7.3 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  47.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -300,6 +300,7 @@ changes.
 Try doing something slightly less "street".
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-09-22 Fri 13:18]--[2017-09-22 Fri 13:34] =>  0:16
     CLOCK: [2017-09-22 Fri 13:08]--[2017-09-22 Fri 13:17] =>  0:09
     CLOCK: [2017-09-22 Fri 11:31]--[2017-09-22 Fri 12:02] =>  0:31
     CLOCK: [2017-09-22 Fri 11:26]--[2017-09-22 Fri 11:30] =>  0:04
